# doc_reader

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: plan.md
.github/workflows/: build-macos.yml  build.yml
public/: doc_reader.html
public/fonts/: README.md  fonts.css
public/static/: app.js  doc_reader.js  doc_reader_theme.css  notebook.js  render_utils.js  shell.js  style.css
scripts/: copy-pdfjs-assets.mjs  gen_icon.py
src/: App.tsx  heti.d.ts  main.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  commands.rs  config.rs  db.rs  doc_reader.rs  epub_cover.rs  knowledge_points.rs  lib.rs  library_cmd.rs  library_db.rs  llm.rs  parser.rs  rag.rs  runtime.rs  training.rs
src/components/markdown/: AsciiDiagram.tsx  AsciiSvgRenderer.tsx  EditorBubbleMenu.tsx  IconRegistry.tsx  (+10 more)
src/lib/: androidBack.ts  androidPolyfills.ts  api.ts  cn.ts  fileImport.ts  foliate.ts  fontLoader.ts  tauri.ts  useIsMobile.ts  useLayoutMode.ts  usePlatform.ts  useTheme.ts
src/pages/: CourseWorkspacePage.tsx  CoursesPage.tsx  HomePage.tsx  LibraryPage.tsx  NotebookPage.tsx  ReaderPage.tsx  SettingsPage.tsx  SkillsPage.tsx  TrainingPage.tsx  doc_reader.html  doc_reader.html.bak  settings.html
src/shell/: AppSidebar.tsx  GlobalDropZone.tsx  TitleBar.tsx  chromeStore.ts
src/styles/: globals.css  tokens.css
src/types/: annotation.ts  course.ts  notebook.ts  resource.ts
(+42 files in other folders)
