[package]
name = "doc-reader"
version = "0.1.0"
description = "Doc Reader - AI-powered document reading & note generation"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }
base64 = "0.22"
zip = "2"
scraper = "0.20"
pdf-extract = "0.7"
lopdf = "0.34"
quick-xml = "0.36"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
regex = "1"
futures = "0.3"
